Fix css issue in text editor
Content of the text editor was overlapping the shadow of the editor. Additional padding fixes the issue.
RISDEV-4567

--- a/frontend/src/styles/border-numbers.css
+++ b/frontend/src/styles/border-numbers.css
@@ -3,6 +3,7 @@ border-number {
   align-items: baseline;
 }
 
+/* stylelint-disable-next-line selector-type-no-unknown */
 border-number number {
   display: flex;
   min-width: 40px;
@@ -12,6 +13,8 @@ border-number number {
   line-height: 1;
 }
 
+/* stylelint-disable-next-line selector-type-no-unknown */
 #attachment-view border-number number {
   background: transparent;
+  margin-right: 4px;
 }
